codegen/tests/attribute_auto_provide/fail/attribute_params.rs
use depcon::*;

trait Interface {}
struct Implementation;

#[auto_provide(bad)]
impl Interface for Implementation {}

fn main() {}
